--- a/project-app/src/app/detailed-introduction/detailed-introduction.component.html
+++ b/project-app/src/app/detailed-introduction/detailed-introduction.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid intro-wrapper">
     <div class="row">
-            <aside class="col-2">
+            <aside class="col-xlg-2 col-md-3 col-sm-4 col-5">
                 <div class="wrap-aside" >
                     <h4>Test skills</h4>
                     <ul>
@@ -29,9 +29,9 @@
                     </ul>
                 </div>
             </aside>
-        <section class="col-9 intro-section">
+        <section class="col-xlg-9 col-md-8 col-sm-7 col-6 intro-section">
             <h1 class="name-content">Name Content</h1>
-            <img class="intro-pic col-3" src="../assets/profile.jpeg" alt="Profile picture"/>
+            <img class="intro-pic col-md-3 col-sm-7 col-12" src="../assets/profile.jpeg" alt="Profile picture"/>
             <div>
                 <h4>Introduction</h4>
                 <section>
