--- a/project-app/src/app/detailed-project/detailed-project.component.html
+++ b/project-app/src/app/detailed-project/detailed-project.component.html
@@ -1,26 +1,43 @@
-<div class="item-wrap">
-    <h1>Test project title</h1>
-    <h4>Test project subhead</h4>
-    <summary>
-        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-    </summary>
-    <article>
-        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
-        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
-        Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br> <img  alt="Project picture"/> Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-    </article>
-    <aside>
-        Project categories
-        <ul>
-           <li>Test category 1</li>
-           <li>Test category 2</li>
-           <li>Test category 3</li>
-        </ul>
-    </aside>
+<div class="container-fluid item-wrap">
+    <div class="row justify-content-center">
+        <aside class="">
+            Project categories
+            <ul>
+               <li>Test category 1</li>
+               <li>Test category 2</li>
+               <li>Test category 3</li>
+            </ul>
+            Used technolgies
+            <ul>
+               <li>Test technology 1</li>
+               <li>Test technology 2</li>
+               <li>Test technology 3</li>
+            </ul>
+        </aside>
+        <div class="content-wrapper">
+            <h1 class="col-md-9 offset-md-3 offset-2">Test project title</h1>
+            <h4 class="col-md-6 offset-xlg-5 offset-md-4 offset-3">Test project subhead</h4>
+            <summary class="col-7 offset-3">
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br>Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </summary>
+            <article class="col-9 offset-2">
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br> <img  alt="Project picture"/> Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi. <img  alt="Project picture"/> <br>
+                Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.<br> <img  alt="Project picture"/> Project short summary.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            </article>
+        </div>
+    </div>
 </div>
