--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -6,7 +6,7 @@
           <li class="nav-item"><a routerLink="/" class="nav-link menu-item">Home</a></li>
           <li class="nav-item">
             <div class="dropdown">
-              <a class="nav-link menu-item" data-toggle="dropdown" id="test_menu_dropdown" aria-haspopup="true" aria-expanded="false" href="#">Test menu 2</a>
+              <a class="nav-link menu-item" data-toggle="dropdown" id="test_menu_dropdown" aria-haspopup="true" aria-expanded="false" href="#">Projects</a>
               <div class="dropdown-menu" aria-labelledby="test_menu_dropdown">
                   <a class="dropdown-item" routerLink="/projectItem" >Test ProjectItem 1</a>
                   <a class="dropdown-item" href="#">Test Dropdown Item 2</a>
