--- a/project-app/src/app/landingpage/landingpage.component.html
+++ b/project-app/src/app/landingpage/landingpage.component.html
@@ -12,8 +12,8 @@
                     <img class="col-5 col-lg-2 offset-md-6 offset-lg-0 profile-pic" src="../assets/profile.jpeg" alt="Profile Picture"/>
                 </div>
                 <ul class="row justify-content-start">
-                    <li class="col-6 col-md-9 col-lg-3 offset-3 offset-md-3 offset-lg-3"><a class="" href="#">LinkedIn Profile</a ></li>
-                    <li class="col-7 col-md-12 col-lg-4 offset-2 offset-md-2 offset-lg-0"><a class="" href="">Detailed Introduction</a></li>
+                    <li class="col-6 col-md-9 col-lg-3 offset-3 offset-md-3 offset-lg-3"><a  target="_blank" href="https://www.linkedin.com/in/b%C3%A1lint-horv%C3%A1th-17556819a/">LinkedIn Profile</a ></li>
+                    <li class="col-7 col-md-12 col-lg-4 offset-2 offset-md-2 offset-lg-0"><a routerLink="/detailedIntro">Detailed Introduction</a></li>
                 </ul>
             </div>
         </div>
