--- a/project-app/src/app/landingpage/landingpage.component.html
+++ b/project-app/src/app/landingpage/landingpage.component.html
@@ -22,6 +22,6 @@
 <div class="container-fluid">
    <app-project-item-list class="d-flex flex-wrap justify-content-around"></app-project-item-list>
 </div>
-<div class="container-fluid subscription-wrapper">
+<!--<div class="container-fluid subscription-wrapper">
     <app-subscription-form></app-subscription-form>
-</div>
+</div>-->
