--- a/project-app/src/app/project-item/project-item.component.html
+++ b/project-app/src/app/project-item/project-item.component.html
@@ -1,5 +1,5 @@
 <div class="project d-flex flex-column align-items-center justify-content-between">
-    <h6><a [appCustom]="(projectItem.title === 'Test Project Title 1')" [routerLink]="'/' + projectItem.id">{{ projectItem.title | uppercase }}</a></h6>
+    <h6><a [appCustom]="(projectItem.title === 'Test Project Title 1')" [routerLink]="'/' + projectItem.id">{{ projectItem.title | titlecase }}</a></h6>
     <img class="align-self-center img-fluid img-thumbnail" src="../assets/ai.jpeg" alt="Project Picture 1"/>
-    <p class="align-self-end">{{ projectItem.description }}</p>     
+    <p class="align-self-end">{{ projectItem.summary }}</p>     
 </div>
