--- a/project-app/src/app/landingpage/landingpage.component.css
+++ b/project-app/src/app/landingpage/landingpage.component.css
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: 376px) {
     .name-content {
-        font-size: 40px;
+        font-size: 25px;
     }
     .job-content {
         font-size: 17px;
@@ -22,11 +22,14 @@
     .text-content ul li > a{
         font-size: 15px;
     }
+    .introduction-wrapper {
+        padding-top: 30px;
+    }
 }
 
 @media screen and (max-width: 576px) and (min-width: 376px){
     .name-content {
-        font-size: 45px;
+        font-size: 30px;
     }
     .job-content {
         font-size: 20px;
@@ -40,11 +43,14 @@
     .text-content ul li > a{
         font-size: 17px;
     }
+    .introduction-wrapper {
+        padding-top: 30px;
+    }
 }
 
 @media screen and (min-width: 576px) {
     .name-content {
-        font-size: 60px;
+        font-size: 30px;
     }
     .job-content {
         font-size: 25px;
@@ -58,11 +64,14 @@
     .text-content ul li > a{
         font-size: 19px;
     }
+    .introduction-wrapper {
+        padding-top: 30px;
+    }
 }
 
 @media screen and (min-width: 768px) {
     .name-content {
-        font-size: 70px;
+        font-size: 40px;
     }
     .job-content {
         font-size: 30px;
@@ -80,7 +89,7 @@
 
 @media screen and (min-width: 992px) {
     .name-content {
-        font-size: 80px;
+        font-size: 50px;
     }
     .job-content {
         font-size: 30px;
@@ -95,7 +104,7 @@
 
 @media screen and (min-width: 1200px) {
     .name-content {
-        font-size: 130px;
+        font-size: 100px;
     }
     .job-content {
         font-size: 40px;
@@ -103,7 +112,7 @@
 }
 
 .name-content {
-    font-family: 'Bebas Neue', cursive;
+    font-family: 'Source Code Pro', monospace;
 }
 
 .job-content {
