--- a/project-app/src/app/project-item-list/project-item-list.component.css
+++ b/project-app/src/app/project-item-list/project-item-list.component.css
@@ -1,14 +1,32 @@
 h1 {
     margin-top: 5%;
-    font-size:100px;
     font-family: 'Playfair Display', serif;
 }
 
 .categories{
-    font-size: 17px;
     font-family: 'Source Code Pro', monospace;
 }
 
 .wrap-list {
     padding-bottom: 50px;
+}
+
+@media screen and (min-width: 992px) {
+    h1 {
+        font-size:100px;
+    }
+
+    .categories{
+        font-size: 17px;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    h1 {
+        font-size: 65px;
+    }
+
+    .categories{
+        font-size: 15px;
+    }
 }
