--- a/project-app/src/app/detailed-introduction/detailed-introduction.component.html
+++ b/project-app/src/app/detailed-introduction/detailed-introduction.component.html
@@ -1,116 +1,12 @@
 <div class="container-fluid intro-wrapper">
     <div class="row">
-            <aside class="col-xlg-2 col-md-3 col-sm-4 col-5">
-                <div class="wrap-aside" >
-                    <h4>Professional skills</h4>
-                    <ul>
-                        <li>
-                            Main program languages and frameworks
-                            <ul>
-                                <li>
-                                    Scala
-                                </li>
-                                <li>
-                                    Apache Spark
-                                </li>
-                                <li>
-                                    Java EE
-                                </li>
-                                <li>
-                                    Spring
-                                </li>
-                                <li>
-                                    C# .NET
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            Software Development Methodologies
-                            <ul>
-                                <li>
-                                    Classic
-                                </li>
-                                <li>
-                                    Agile (Scrum, Kanban)
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            Database tachnologies
-                            <ul>
-                                <li>
-                                    DB2
-                                </li>
-                                <li>
-                                    MSSQL
-                                </li>
-                                <li>
-                                    PostgreSQL
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            Basic knowledge of programming languages and technologies
-                            <ul>
-                                <li>
-                                    Python
-                                </li>
-                                <li>
-                                    C,C++
-                                </li>
-                                <li>
-                                    TypeScript, HTML, CSS, Bootstrap, Angular
-                                </li>
-                                <li>
-                                    ASP.NET, Entity Framework
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            Others
-                            <ul>
-                                <li>
-                                    CI/CD (Jenkins)
-                                </li>
-                                <li>
-                                    Version Control (Git)
-                                </li>
-                                <li>
-                                    Linux Shell
-                                </li>
-                                <li>
-                                    Test Driven Development
-                                </li>
-                                <li>
-                                    Issue Tracking Tool (Jira)
-                                </li>
-                                <li>
-                                    Basics of Deep Learning
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <h4>Languages</h4>
-                    <ul>
-                        <li>
-                            English (International English Language Testing System 6.5)
-                        </li>
-                        <li>
-                            German (Österreichisches Sprachdiplom Deutsch C1)
-                        </li>
-                        <li>
-                            Hungarian (native)
-                        </li>
-                    </ul>
-                </div>
-            </aside>
-        <section class="col-xlg-9 col-md-8 col-sm-7 col-6 intro-section">
+        <section class="col-xlg-9 col-md-8 col-sm-7 col-12 intro-section">
             <h1 class="name-content">Bálint Horváth</h1>
-            <img class="intro-pic col-md-3 col-sm-7 col-12" src="../assets/profile.jpeg" alt="Profile picture"/>
+            <img class="intro-pic col-md-3 col-sm-7 col-7 offset-3 offset-sm-0" src="../assets/profile.jpeg" alt="Profile picture"/>
             <div>
                 <h4>Introduction</h4>
                 <section>
-                 <p class="col-8 intro-text">I'm a software engineer graduated from the Technical University of Budapest as Computer Engineer BSc., 
+                 <p class="col-11 intro-text">I'm a software engineer graduated from the Technical University of Budapest as Computer Engineer BSc., 
                      specializing in backend technologies and planning to continue with Master's degree.</p>
                  </section>
                  <h4>Contacts</h4>
@@ -133,20 +29,20 @@
                     <li>
                         <section>
                             <h5>2011-2016 Zrínyi Miklós Secondary Grammar School, Zalaegerszeg</h5>
-                            <p class="col-8">Mathematics class</p>
+                            <p class="col-10">Mathematics class</p>
                         </section>
                     </li>
                     <li>
                         <section>
                             <h5>2016 – 2020 Budapest University of Technology and Economics
                                 Faculty of Electrical Engineering and Informatics (VIK)</h5>
-                            <p  class="col-8">Computer Engineering (BSc) – 4 Semesters in German language</p>
+                            <p  class="col-10">Computer Engineering (BSc) – 4 Semesters in German language</p>
                         </section>
                     </li>
                     <li>
                         <section>
-                            <h5>2018/2019 Winter Semester – Karlsruhe Institute für Technologie</h5>
-                            <p  class="col-8">Erasmus Semester</p>
+                            <h5>2018/2019 Winter Semester – Karlsruhe Institute of Technology</h5>
+                            <p  class="col-10">Erasmus Semester</p>
                         </section>
                     </li>
                 </ul>
@@ -157,23 +53,127 @@
                     <li>
                         <section>
                             <h5>August 2018 – October 2018 DAMIT Informatika Kft. (Budapest)</h5>
-                            <p class="col-8">Intern in IT Helpdesk Team</p>
+                            <p class="col-10">Intern in IT Helpdesk Team</p>
                         </section>
                     </li>
                     <li>
                         <section>
                             <h5>October 2018 – February 2019 YellowMap AG (Karlsruhe), unit of CAS Software AG</h5>
-                            <p  class="col-8">As Software Developer Intern contributed to reports with MSSQL and geo-solutions with PostgreSQL and C# .net</p>
+                            <p  class="col-10">As Software Developer Intern contributed to reports with MSSQL and geo-solutions with PostgreSQL and C# .NET</p>
                         </section>
                     </li>
                     <li>
                         <section>
                             <h5>June 2019 – August 2020 Morgan Stanley (Budapest), Finance Technology</h5>
-                            <p  class="col-8">As Software Developer Intern contributed to an accounting engine and state machine project with DevOps, DB2, Java, Angular, ELM, Python, Scala and Big Data (Apache Spark) solutions.</p>
+                            <p  class="col-10">As Software Developer Intern contributed to an accounting engine and state machine project with DevOps, DB2, Java, Angular, ELM, Python, Scala and Big Data (Apache Spark) solutions.</p>
                         </section>
                     </li>
                 </ul>
             </div>
         </section>
+        <aside class="col-xlg-2 col-md-3 col-sm-4 col-12">
+            <div class="wrap-aside" >
+                <h4>Professional skills</h4>
+                <ul>
+                    <li>
+                        Main program languages and frameworks
+                        <ul>
+                            <li>
+                                Scala
+                            </li>
+                            <li>
+                                Apache Spark
+                            </li>
+                            <li>
+                                Java EE
+                            </li>
+                            <li>
+                                Spring
+                            </li>
+                            <li>
+                                C# .NET
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Software Development Methodologies
+                        <ul>
+                            <li>
+                                Classic
+                            </li>
+                            <li>
+                                Agile (Scrum, Kanban)
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Database tachnologies
+                        <ul>
+                            <li>
+                                DB2
+                            </li>
+                            <li>
+                                MSSQL
+                            </li>
+                            <li>
+                                PostgreSQL
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Basic knowledge of programming languages and technologies
+                        <ul>
+                            <li>
+                                Python
+                            </li>
+                            <li>
+                                C,C++
+                            </li>
+                            <li>
+                                TypeScript, HTML, CSS, Bootstrap, Angular
+                            </li>
+                            <li>
+                                ASP.NET, Entity Framework
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        Others
+                        <ul>
+                            <li>
+                                CI/CD (Jenkins)
+                            </li>
+                            <li>
+                                Version Control (Git)
+                            </li>
+                            <li>
+                                Linux Shell
+                            </li>
+                            <li>
+                                Test Driven Development
+                            </li>
+                            <li>
+                                Issue Tracking Tool (Jira)
+                            </li>
+                            <li>
+                                Basics of Deep Learning
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <h4>Languages</h4>
+                <ul>
+                    <li>
+                        English (International English Language Testing System 6.5)
+                    </li>
+                    <li>
+                        German (Österreichisches Sprachdiplom Deutsch C1)
+                    </li>
+                    <li>
+                        Hungarian (native)
+                    </li>
+                </ul>
+            </div>
+        </aside>
     </div>
 </div>
