--- a/project-app/src/app/project-item/project-item.component.css
+++ b/project-app/src/app/project-item/project-item.component.css
@@ -1,19 +1,38 @@
-@media screen and (min-width: 992px) {
-    .project {
-        margin-left: 31px;
-    }
-}
 
 @media screen and (max-width: 991px) {
     .project {
         margin-left: 25px;
+        margin-top: 50px;
+    }
+
+    .project h6 {
+        font-size: 20px;
+    }
+
+    .project p {
+        font-size: 15px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .project {
+        margin-left: 31px;
+        margin-top: 100px;
+    }
+
+    .project h6 {
+        font-size: 35px;
+    }
+
+    .project p {
+        font-size: 20px;
     }
 }
 
 
+
 .project {
     max-width: 700px;
-    margin-top: 100px;
+   
     border-color: rgb(192, 192, 192);
     border-style: solid;
     border-width: thin;
@@ -25,7 +44,6 @@
 
 .project h6 {
     margin-top: 15px;
-    font-size: 35px;
     border-bottom: ridge;
     width: 100%;
     text-align: center;
@@ -47,7 +65,7 @@
     margin-top: 0 auto;
     text-align: justify;
     font-family: 'Playfair Display', serif;
-    font-size: 20px;
+   
     padding: 10px 40px;
     border-top: ridge;
 }
