--- a/project-app/src/app/app.component.html
+++ b/project-app/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-sm">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img class="img-fluid rounded" src="/assets/main-logo.png" alt="Logo"/></a>
+        <a class="navbar-brand" href="#"><img class="img-fluid rounded" src="/assets/b.png" alt="Logo"/></a>
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#togglerNav" 
         aria-controls="togglerNav" aria-expanded="false" aria-label="Toggle navbar">
           <span class="navbar-toggler-icon"></span>
