--- a/project-app/src/app/detailed-introduction/detailed-introduction.component.html
+++ b/project-app/src/app/detailed-introduction/detailed-introduction.component.html
@@ -7,7 +7,7 @@
                 <h4>Introduction</h4>
                 <section>
                  <p class="col-11 intro-text">I'm a software engineer graduated from the Technical University of Budapest as Computer Engineer BSc., 
-                     specializing in backend technologies and planning to continue with Master's degree.</p>
+                     specializing in backend technologies.</p>
                  </section>
                  <h4>Contacts</h4>
                  <ul>
