--- a/project-app/src/app/landingpage/landingpage.component.html
+++ b/project-app/src/app/landingpage/landingpage.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="text-content">
                 <div class="row justify-content-center summary">
-                    <p class="col-10 col-lg-5 offset-md-2 offset-lg-0">I'm a software engineer graduated from the Technical University of Budapest, specializing in backend technologies.</p>
+                    <p class="col-10 col-lg-5 offset-md-2 offset-lg-0">I'm a software engineer graduated from the Technical University of Budapest, specialized in backend technologies.</p>
                     <img class="col-5 col-lg-2 offset-md-6 offset-lg-0 profile-pic" src="../assets/profile.jpeg" alt="Profile Picture"/>
                 </div>
                 <ul class="row justify-content-start">
