--- a/project-app/src/app/app.component.css
+++ b/project-app/src/app/app.component.css
@@ -8,7 +8,11 @@ html {
  
  /* HEADER
  -------------------------------------*/
- 
+ .img-fluid {
+    max-width: 15%;
+    height: auto;
+  }
+
  .navbar {
      height: 80px;
      background-color: white;
