--- a/project-app/src/app/detailed-project/detailed-project.component.html
+++ b/project-app/src/app/detailed-project/detailed-project.component.html
@@ -13,7 +13,7 @@
         <div class="content-wrapper" >
             <h1 class="col-md-9 offset-md-2 offset-0">{{ projectItem.title }}</h1>
             <h4 class="col-md-6 offset-xlg-5 offset-md-4 offset-md-3 offset-0">{{ projectItem.subheader }}</h4>
-            <summary class="col-md-7 col-8 offset-md-3 offset-2" [innerHTML]="projectItem.summary"></summary>
+            <article class="col-md-7 col-8 offset-md-3 offset-2" [innerHTML]="projectItem.summary"></article>
             <div class="articles col-md-9 col-11 offset-md-2 offset-1" *ngFor="let desc of projectItem.description" [innerHTML]="desc"></div>
         </div>
     </div>
