--- a/project-app/src/app/detailed-introduction/detailed-introduction.component.html
+++ b/project-app/src/app/detailed-introduction/detailed-introduction.component.html
@@ -45,6 +45,12 @@
                             <p  class="col-10">Erasmus Semester</p>
                         </section>
                     </li>
+                    <li>
+                        <section>
+                            <h5>2021 – Present Technical University of Vienna</h5>
+                            <p  class="col-10">Data Science (MSc) – English language program</p>
+                        </section>
+                    </li>
                 </ul>
             </div>
             <div>
@@ -90,9 +96,6 @@
                             <li>
                                 Spring
                             </li>
-                            <li>
-                                C# .NET
-                            </li>
                         </ul>
                     </li>
                     <li>
@@ -133,7 +136,7 @@
                                 TypeScript, HTML, CSS, Bootstrap, Angular
                             </li>
                             <li>
-                                ASP.NET, Entity Framework
+                                C#, ASP.NET, Entity Framework
                             </li>
                         </ul>
                     </li>
